# apple-health-analyzer

./: .gitignore  LICENSE  MAINTAINERS.md  README.md  anonymize_gpx.py  codecov.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  roadmap.md  sonar-project.properties  tracktales.spec
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: codacy.instructions.md
.github/workflows/: autoupdate.yml  codeql.yml  constraints-pyinstaller.txt  constraints-test.txt  conventional-commits.yml  dependency-review.yml  release.yml  requirements-release-build.txt  requirements-release-pyinstaller.txt  requirements-release-test.txt  sonar.yml  tests.yml
.sonarlint/: connectedMode.json
resources/: style.css
src/: __init__.py  app_state.py  apple_health_analyzer.py  assets.py  export_parser.py  local_file_picker.py  logging_config.py  tracktales.py  version.py
src/i18n/: __init__.py  activity_types.py  translations.py
src/i18n/locales/: README.md  messages.pot
src/logic/: __init__.py  export_parser.py  models.py  parsed_health_data.py  records_by_type.py  workout_detail_schema.py  workout_manager.py  workout_route.py
src/logic/workout_manager/: __init__.py  aggregations.py  export.py  helpers.py  manager.py  segments.py  swimming.py  workout_route.py
src/ui/: __init__.py  activities_tab.py  best_segments.py  charts.py  css.py  health_data_tab.py  helpers.py  layout.py  local_file_picker.py  running_tab.py  statistics_tab.py  trends_tab.py  workout_detail_modal.py  workout_detail_modal_comparisons.py  workout_table.py
src/ui/workout_detail_modal/: __init__.py  builder.py  comparisons.py  routes.py
tests/: conftest.py  test_app_state.py  test_apple_health_analyzer.py  test_auto_load.py  test_cli_dev_file.py  test_dev_file_autoload.py  test_export_parser.py  test_export_parser_complex.py  test_export_parser_core.py  test_export_parser_export.py  test_export_parser_parsing.py  test_export_parser_statistics.py  test_export_parser_workout.py  test_i18n_activity_types.py  test_i18n_compilation.py  test_i18n_translations.py  test_local_file_picker.py  test_logging_setup.py  test_package_init.py  test_version.py  types_helper.py
tests/fixtures/: README.md  anonymize_gpx.py  update_export_sample.py
tests/fixtures/exports/: record_body_mass.xml  record_heart_rate.xml  record_running_power.xml  record_vo2_max.xml  workout_cycling.xml  workout_hiking.xml  workout_running.xml  workout_running_long_distance.xml  workout_running_multiple_parts.xml  workout_running_too_fast.xml  workout_running_usaint_bolt.xml  workout_strength.xml  workout_swimming.xml
tests/fixtures/exports/workout-routes/: route_2021-12-26_4.50pm.gpx  route_2024-12-26_2.53pm.gpx  route_2024-12-26_2.54pm.gpx  route_2024-12-26_2.55pm.gpx  route_2024-12-26_2.56pm.gpx  route_2024-12-26_2.57pm.gpx  route_2024-12-26_2.58pm.gpx  route_2024-12-26_2.59pm.gpx  route_2024-12-26_3.00pm.gpx  route_2024-12-26_3.01pm.gpx  route_2024-12-26_3.04pm.gpx  route_2025-07-14_6.51pm.gpx  route_2025-09-16_6.15pm.gpx  route_2025-09-26_7.00pm.gpx  route_2025-09-26_7.01pm.gpx  route_2025-09-26_7.02pm.gpx  route_2025-09-26_7.03pm.gpx  route_2025-09-26_7.04pm.gpx  route_2025-09-26_7.05pm.gpx  route_2025-09-26_7.06pm.gpx  route_2025-09-26_7.07pm.gpx  route_2025-09-26_7.08pm.gpx  route_2025-09-26_7.09pm.gpx  route_2025-09-26_7.11pm.gpx  route_2025-09-26_7.12pm.gpx  route_2025-09-26_7.13pm.gpx  (+6 more)
tests/i18n/: __init__.py  test_translations.py
tests/logic/: test_export_parser_complex.py  test_export_parser_core.py  test_export_parser_export.py  test_export_parser_parsing.py  test_export_parser_record.py  test_export_parser_statistics.py  test_export_parser_workout.py  test_records_by_type.py  test_workout_detail_schema.py  test_workout_manager_activity_types.py  test_workout_manager_best_segments.py  test_workout_manager_by_activity.py  test_workout_manager_by_period.py  test_workout_manager_core.py  test_workout_manager_critical_power.py  test_workout_manager_date_filtering.py  test_workout_manager_export.py  test_workout_manager_missing_coverage.py  test_workout_manager_segments_power.py  test_workout_manager_statistics.py  test_workout_manager_totals.py  test_workout_route.py
tests/logic/workout_manager/: test_workout_manager_activity_types.py  test_workout_manager_best_segments.py  test_workout_manager_core.py  test_workout_manager_critical_power.py  test_workout_manager_export.py  test_workout_manager_helpers.py  test_workout_manager_missing_coverage.py  test_workout_manager_range_filters.py  test_workout_manager_segments_power.py  test_workout_manager_statistics.py  test_workout_manager_totals.py  test_workout_route.py
tests/logic/workout_manager_by_period/: test_calories_distance.py  test_count_duration.py  test_elevation.py
tests/ui/: __init__.py  test_apple_health_analyzer.py  test_helpers.py  test_layout_core.py  test_layout_formatting.py  test_layout_functions.py  test_layout_logging.py  test_local_file_picker.py
tests/ui/layout_functions/: _helpers.py  _modal_stubs.py  test_best_segments.py  test_export_and_moving_average.py  test_health_data_and_loading.py  test_layout_state_and_loading.py  test_running_and_statistics_tab.py  test_trends_and_generic_graph.py  test_workout_detail_modal.py  test_workout_detail_modal_comparisons.py  test_workout_detail_modal_intervals.py  test_workout_table.py  test_workout_table_render.py  test_workout_table_rows.py  test_workout_table_sport_fields.py
tests/ui/workout_detail_modal/: _stubs.py  test_comparisons.py  test_intervals.py  test_modal.py  test_modal_sections.py
tools/: README.md  __init__.py  generate_release_notes.py  profile_best_segments.py  release_dry_run.py
(+3 files in other folders)
