[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-health-analyzer"
version = "0.1.0"
description = "A Python project for analyzing Apple Health data"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Nicolas Reyrolle", email = "405928+NicolasReyrolle@users.noreply.github.com"},
]
keywords = ["apple", "health", "analyzer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
apple-health-analyzer = "apple_health_analyzer:main"

[project.urls]
Homepage = "https://github.com/NicolasReyrolle/apple-health-analyzer"
Repository = "https://github.com/NicolasReyrolle/apple-health-analyzer.git"
Issues = "https://github.com/NicolasReyrolle/apple-health-analyzer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pylint.MASTER]
init-hook = 'import sys; sys.path.append("src")'
