[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-health-analyzer"
version = "0.1.0"
description = "A Python project for analyzing Apple Health data"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Nicolas Reyrolle", email = "405928+NicolasReyrolle@users.noreply.github.com"},
]
keywords = ["apple", "health", "analyzer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
apple-health-analyzer = "apple_health_analyzer:cli_main"

[project.urls]
Homepage = "https://github.com/NicolasReyrolle/apple-health-analyzer"
Repository = "https://github.com/NicolasReyrolle/apple-health-analyzer.git"
Issues = "https://github.com/NicolasReyrolle/apple-health-analyzer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
main_file = "src/apple_health_analyzer.py"
addopts = "-p nicegui.testing.user_plugin"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
