[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracktales"
version = "0.1.0"
description = "TrackTales: Parse, analyze, and visualize your Apple Health workout data with an interactive NiceGUI interface."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "Nicolas Reyrolle", email = "405928+NicolasReyrolle@users.noreply.github.com"},
]
keywords = ["apple", "health", "workouts", "fitness", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
tracktales = "tracktales:cli_main"

[project.urls]
Homepage = "https://github.com/NicolasReyrolle/tracktales"
Repository = "https://github.com/NicolasReyrolle/tracktales.git"
Issues = "https://github.com/NicolasReyrolle/tracktales/issues"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["app_state", "assets", "logging_config", "tracktales", "units", "version"]

[tool.setuptools.package-data]
i18n = ["locales/**/*.po", "locales/**/*.mo", "locales/**/*.pot", "locales/README.md"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
main_file = "src/tracktales.py"
addopts = "-p nicegui.testing.user_plugin"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
extraPaths = ["src"]
reportPrivateUsage = false
